--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Segoe UI', Arial, sans-serif;
-    background: url('https://imgur.com/a/Zde8oKQ#Thj25En') no-repeat center center fixed;
+    font-family: 'Lato', Arial, sans-serif;
+    background: url('https://i.imgur.com/Thj25En.jpeg') no-repeat center center fixed;
     background-size: cover;
     min-height: 100vh;
 }
