--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Lato', Arial, sans-serif;
-    background: url('https://i.imgur.com/Thj25En.jpeg') no-repeat center center fixed;
+    background: url('https://t4.ftcdn.net/jpg/03/92/25/09/360_F_392250914_2Od8jNRBPgpMu8W29vCh4hiu5EUXbgGU.jpg') no-repeat center center fixed;
     background-size: cover;
     min-height: 100vh;
 }
